--- a/djangocms_admin_style/sass/partials/_content.scss
+++ b/djangocms_admin_style/sass/partials/_content.scss
@@ -159,6 +159,7 @@ body {
     box-shadow: inset 0 0 $button-shadow-width $background-color-white !important;
     .deletelink-box {
         line-height: 24px;
+        margin: 0.9em;
     }
     .deletelink {
         @include button-common();
@@ -465,7 +466,7 @@ a.addlink {
 // object tools
 .object-tools {
     float: right;
-    margin-top: -75px;
+    margin-top: -78px;
     li {
         height: 43px;
         padding-left: 5px;
@@ -539,7 +540,8 @@ a.addlink {
 
 // cms language buttons
 #page_form_lang_tabs {
-   border-bottom: solid 1px $line-color-ultralight;
+    margin-bottom: 30px;
+    border-bottom: solid 1px $line-color-ultralight;
 }
 #page_form_lang_tabs input {
     color: $font-color !important;
